...
    <string name="nav_lightSensorDemo">Light Sensor Demo</string>
    <string name="avatar_description">Avatar</string>
    <string name="real_name">Real Name</string>
    <string name="user_name">Username</string>
    <string name="friends">My Friends</string>
    <string name="my_observations">My Observations</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="button_text_save">Save</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="edit_avatar">Click to upload new</string>
    <string name="hint_bird_name">Bird name</string>
    <string name="hint_description">Description</string>
    <string name="lbl_location">Location: %1$s</string>
...
