<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddObservationFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_add_observation"
                android:layout_width="175dp"
                android:layout_height="0dp"
                android:layout_marginTop="86dp"
                android:layout_marginBottom="36dp"
                android:src="@drawable/ic_camera_alt_black_24dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="New observation"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/img_add_observation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.153" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:enabled="false"
                android:text="Add observation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="409dp"
                android:layout_height="0dp"
                android:layout_marginBottom="84dp"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_add_observation">

                <EditText
                    android:id="@+id/txt_bird_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Bird name" />

                <TextView
                    android:id="@+id/txt_location"
                    android:textColor="@android:color/holo_green_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Location: 120.334443, 10.345"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/txt_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Weather data: Retrieving..."
                    android:textColor="@android:color/red"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Time: Lø. 18. april 2020, kl 16:58"
                    android:textSize="18dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/txt_addobs_image_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tap to take a picture"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_add_observation"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>