...

                </LinearLayout>



                <Button
                    android:id="@+id/btn_add_observation"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:enabled="@{vm.validated}"
                    android:text="@string/lbl_btn_add_observation"/>
            </LinearLayout>
...
